--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
    
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
  
-    <title>Alset Car Order Page</title>
+    <title>Alset Model 3 Order Page</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
